2007-05-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAttributes.cs: Remove TODO for ColorMatrixFlags and Gray 
	ColorMatrix support methods. Add TODO on some stuff not supported by
	libgdiplus (so MoMA reports gets more accurate). Fix coding style.

2007-05-09 Igor Zelmanovich <igorz@mainsoft.com>

	* EncoderParameter.jvm.cs: removed destructor, 
	Dispose doesn't throw exception.

2007-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* Metafile.cs: Reduce size by reusing more complex ctors. Add Linux
	support to metafile recoding with the new delegate-based functions.

2007-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Metafile.cs: Complete all ctors (except for stream-based one outside
	Windows) with calls into GDI+.

2007-03-28  Sebastien Pouliot  <sebastien@ximian.com>  

	* MetaHeader.cs: Make workaround (#81254) permanent and return correct
	values on big endian architectures.

2007-03-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetaHeader.cs: Workaround bug #81254 where the SPARC architecture 
	can't use the misaligned integer in the structure (with Pack=2).

2007-03-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetafileHeader.cs: WmfHeader is available on non-placeable WMF too.

2007-03-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetafileHeader.cs: WmfHeader throws if the metafile isn't a WMF (e.g. 
	EMF, EMF+ or EMF dual).

2007-03-09  Sebastien Pouliot  <sebastien@ximian.com>

	* MetafileHeader.cs: Fix offset to match correct C definition.

2007-02-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Metafile.cs: Implement a few cases required to playback metafiles.
	* MetafileHeader.cs: Implemented.
	* MetaHeader.cs: Implemented.
	* WmfPlaceableFileHeader.cs: Adjust packing.

2007-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAttribute.cs: Reuse code in SetColorMatrix overloads.

2007-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageCodecInfo.cs: Remove MonoTODO on SignaturePatterns.
