@@ -60,7 +60,7 @@ namespace System.Drawing.Imaging {
 			if (GDIPlus.RunningOnUnix ()) {
 				// With libgdiplus we use a custom API for this, because there's no easy way
 				// to get the Stream down to libgdiplus. So, we wrap the stream with a set of delegates.
-				GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream);
+				GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream, false);
 				status = GDIPlus.GdipCreateMetafileFromDelegate_linux (sh.GetHeaderDelegate, sh.GetBytesDelegate, 
 					sh.PutBytesDelegate, sh.SeekDelegate, sh.CloseDelegate, sh.SizeDelegate, out nativeObject);
 			} else {
@@ -268,7 +268,7 @@ namespace System.Drawing.Imaging {
 			if (GDIPlus.RunningOnUnix ()) {
 				// With libgdiplus we use a custom API for this, because there's no easy way
 				// to get the Stream down to libgdiplus. So, we wrap the stream with a set of delegates.
-				GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream);
+				GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream, false);
 				status = GDIPlus.GdipRecordMetafileFromDelegateI_linux (sh.GetHeaderDelegate, sh.GetBytesDelegate, 
 					sh.PutBytesDelegate, sh.SeekDelegate, sh.CloseDelegate, sh.SizeDelegate, referenceHdc, 
 					type, ref frameRect, frameUnit, description, out nativeObject);
@@ -289,7 +289,7 @@ namespace System.Drawing.Imaging {
 			if (GDIPlus.RunningOnUnix ()) {
 				// With libgdiplus we use a custom API for this, because there's no easy way
 				// to get the Stream down to libgdiplus. So, we wrap the stream with a set of delegates.
-				GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream);
+				GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream, false);
 				status = GDIPlus.GdipRecordMetafileFromDelegate_linux (sh.GetHeaderDelegate, sh.GetBytesDelegate, 
 					sh.PutBytesDelegate, sh.SeekDelegate, sh.CloseDelegate, sh.SizeDelegate, referenceHdc, 
 					type, ref frameRect, frameUnit, description, out nativeObject);
@@ -364,7 +364,7 @@ namespace System.Drawing.Imaging {
 				if (GDIPlus.RunningOnUnix ()) {
 					// With libgdiplus we use a custom API for this, because there's no easy way
 					// to get the Stream down to libgdiplus. So, we wrap the stream with a set of delegates.
-					GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream);
+					GDIPlus.GdiPlusStreamHelper sh = new GDIPlus.GdiPlusStreamHelper (stream, false);
 					status = GDIPlus.GdipGetMetafileHeaderFromDelegate_linux (sh.GetHeaderDelegate, 
 						sh.GetBytesDelegate, sh.PutBytesDelegate, sh.SeekDelegate, sh.CloseDelegate, 
 						sh.SizeDelegate, header);
