@@ -1,3 +1,9 @@
+2007-11-05  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* Image.cs: Add test cases for the stream position when loading and
+	saving bitmaps and metafiles. Some of them are based on Gert Driesen
+	samples in #338779
+
 2007-08-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* TestGraphics.cs: Test against NRE in MultiplyTransform
